// DG Platform - esquema inicial de migracion Excel -> PostgreSQL
// Importar este archivo en https://dbdiagram.io
// Alcance: replica 1:1 de las hojas activas de local-data/BASE DE DATOS DG/En uso.
// En esta primera etapa no se agregan relaciones de negocio obligatorias.

Project dg_platform {
  database_type: 'PostgreSQL'
  Note: '''
    Esquema inicial de compatibilidad con Excel.
    Los nombres se normalizan a snake_case, pero cada columna conserva su significado original.
    Las relaciones entre clientes, productos, proveedores y codigos se incorporaran despues
    de validar la migracion completa y la calidad de los datos.
  '''
}

Table source_files {
  id bigint [pk, increment]
  file_name varchar(255) [not null]
  relative_path text [not null]
  checksum_sha256 varchar(64)
  file_modified_at timestamptz
  created_at timestamptz [not null, default: `now()`]

  Note: 'Registro tecnico de cada archivo Excel procesado.'
}

Table import_batches {
  id bigint [pk, increment]
  source_file_id bigint [not null, ref: > source_files.id]
  sheet_name varchar(255) [not null]
  status varchar(30) [not null]
  total_rows integer
  imported_rows integer
  rejected_rows integer
  started_at timestamptz [not null, default: `now()`]
  finished_at timestamptz
  error_detail text

  indexes {
    (source_file_id, sheet_name)
    status
  }

  Note: 'Auditoria de cada importacion de una hoja.'
}

Table base_categorias {
  id bigint [pk, increment]
  legacy_id varchar(100) [note: 'ID string original del Excel; no se usa como clave primaria.']
  codigo_categoria varchar(20) [not null, unique, note: 'Codigo publico estructurado. Formato: CAT-000001.']
  categoria varchar(255)
  activo boolean
  import_batch_id bigint [ref: > import_batches.id]
  source_row_number integer
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: 'Base Categorias DG.xlsx / Categorias. id es la clave interna; legacy_id conserva valores como category-aire-libre.'
}

Table base_clientes {
  id bigint [pk, increment]
  legacy_id varchar(100) [note: 'ID original del Excel; no se usa como clave primaria.']
  nombre varchar(255)
  activo boolean
  creado timestamptz
  import_batch_id bigint [ref: > import_batches.id]
  source_row_number integer
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: 'Base Clientes DG.xlsx / Clientes.'
}

Table base_proveedores {
  id bigint [pk, increment]
  codigo_proveedor varchar(20) [not null, unique, note: 'Codigo publico estructurado. Formato: PRV-000001.']
  legacy_id varchar(100) [note: 'ID original del Excel; no se usa como clave primaria.']
  proveedor varchar(255)
  activo boolean
  import_batch_id bigint [ref: > import_batches.id]
  source_row_number integer
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: 'Base Proveedores DG.xlsx / Proveedores. id es la clave interna y codigo_proveedor es el identificador visible.'
}

Table marcas {
  id bigint [pk, increment]
  codigo_marca varchar(20) [not null, unique, note: 'Codigo publico estructurado. Formato: MAR-000001.']
  nombre varchar(255) [not null]
  activo boolean [not null, default: true]
  import_batch_id bigint [ref: > import_batches.id]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    nombre [unique]
  }

  Note: 'Catalogo generado inicialmente a partir de los valores unicos de Marca en Base Productos DG.xlsx.'
}

Table base_productos {
  id bigint [pk, increment]
  legacy_id varchar(100) [note: 'ID original del Excel; no se usa como clave primaria.']
  producto text
  marca_id bigint [ref: > marcas.id]
  marca_original varchar(255) [note: 'Valor original del Excel para validar la migracion.']
  codigo_unico varchar(255)
  codigo_unico_proveedor varchar(255)
  proveedor_id bigint [ref: > base_proveedores.id]
  proveedor_original varchar(255) [note: 'Valor original del Excel para validar la migracion.']
  categoria_id bigint [ref: > base_categorias.id]
  categoria_original varchar(255) [note: 'Valor original del Excel para validar la migracion.']
  bulto numeric(18,4)
  creado timestamptz
  actualizado timestamptz
  import_batch_id bigint [ref: > import_batches.id]
  source_row_number integer
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    codigo_unico
    proveedor_id
    marca_id
    categoria_id
  }

  Note: 'Base Productos DG.xlsx / Productos. Se conserva como una unica tabla y referencia los catalogos de marcas y proveedores.'
}

Table base_codigo_cliente {
  id bigint [pk, increment]
  legacy_id varchar(100) [note: 'ID original del Excel; no se usa como clave primaria.']
  cliente varchar(255)
  codigo_unico varchar(255)
  codigo_cliente varchar(255)
  mes_asignacion smallint
  anio_asignacion smallint
  activo boolean
  reactivado timestamptz
  corregido timestamptz
  motivo_correccion text
  anulado timestamptz
  motivo_anulacion text
  import_batch_id bigint [ref: > import_batches.id]
  source_row_number integer
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    codigo_unico
    codigo_cliente
    cliente
  }

  Note: 'Base Codigo Cliente DG.xlsx / Codigos Cliente.'
}

Table base_config_tasas_clientes {
  id bigint [pk, increment]
  legacy_id varchar(100) [note: 'ID original del Excel; no se usa como clave primaria.']
  cliente_id varchar(100)
  cliente varchar(255)
  vigente_desde date
  nombre_tasa varchar(255)
  clave varchar(255)
  aplica boolean
  valor_porcentaje numeric(18,6)
  aplica_sobre varchar(255)
  orden integer
  creado timestamptz
  import_batch_id bigint [ref: > import_batches.id]
  source_row_number integer
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    cliente_id
    (cliente_id, vigente_desde)
  }

  Note: 'Base Config Tasas Clientes DG.xlsx / Tasas.'
}

Table base_precios {
  id bigint [pk, increment]
  legacy_id varchar(100) [note: 'ID original del Excel; no se usa como clave primaria.']
  proveedor varchar(255)
  codigo_unico varchar(255)
  dia smallint
  mes smallint
  anio smallint
  costo_dg numeric(18,4)
  iva numeric(18,6)
  precio_publico numeric(18,4)
  mark_up numeric(18,6)
  import_batch_id bigint [ref: > import_batches.id]
  source_row_number integer
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    codigo_unico
    proveedor
    (anio, mes, dia)
  }

  Note: 'Base Precios DG.xlsx / Precios.'
}

Table base_ingresos {
  id bigint [pk, increment]
  cliente varchar(255)
  operacion varchar(255)
  dia_pedido smallint
  mes_pedido smallint
  anio_pedido smallint
  orden_de_compra varchar(255)
  codigo_cliente varchar(255)
  cantidad numeric(18,4)
  origen_del_pasaje varchar(255)
  dia_entrega smallint
  mes_entrega smallint
  anio_entrega smallint
  entregado numeric(18,4)
  comentarios text
  import_batch_id bigint [ref: > import_batches.id]
  source_row_number integer
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    cliente
    operacion
    codigo_cliente
    orden_de_compra
  }

  Note: 'Base Ingresos DG.xlsx / Ingresos.'
}

Table base_egresos_santander {
  id bigint [pk, increment]
  dia smallint
  mes smallint
  anio smallint
  nro_guia varchar(255)
  fecha date
  legacy_id varchar(100) [note: 'ID original del Excel; no se usa como clave primaria.']
  sku varchar(255)
  localidad varchar(255)
  provincia varchar(255)
  cp varchar(50)
  cantidad numeric(18,4)
  cantidad_original text
  migration_warning text
  operacion varchar(255)
  destino text
  comentario text
  import_batch_id bigint [ref: > import_batches.id]
  source_row_number integer
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    fecha
    nro_guia
    sku
    operacion
  }

  Note: 'Base Egresos Santander DG.xlsx / Santander.'
}

Table base_estructura_costos_santander {
  id bigint [pk, increment]
  cliente varchar(255)
  periodo varchar(50)
  mes smallint
  anio smallint
  fecha date
  codigo_cliente varchar(255)
  codigo_unico varchar(255)
  costo_actualizado varchar(50)
  producto text
  proveedor varchar(255)
  categoria varchar(255)
  precio_publico numeric(18,4)
  iva numeric(18,6)
  mark_up numeric(18,6)
  pp_sin_iva numeric(18,4)
  costo_dg_sin_iva numeric(18,4)
  seguro numeric(18,4)
  ingresos_brutos numeric(18,4)
  impuesto_debito numeric(18,4)
  impuesto_credito numeric(18,4)
  flete_sin_iva numeric(18,4)
  costo_total numeric(18,4)
  pvc_sin_iva numeric(18,4)
  pvc_con_iva numeric(18,4)
  utilidad numeric(18,4)
  porcentaje numeric(18,6)
  impuesto_misiones numeric(18,4)
  peso_volumetrico numeric(18,4)
  bultos numeric(18,4)
  origen varchar(255)
  import_batch_id bigint [ref: > import_batches.id]
  source_row_number integer
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    codigo_unico
    codigo_cliente
    (anio, mes)
  }

  Note: 'Base Estructura Costos Santander DG.xlsx / Santander.'
}

Table criterios_flete {
  id bigint [pk, increment]
  codigo_unico varchar(255)
  modo varchar(20)
  valor numeric(18,6)
  vigente_desde varchar(7)
  import_batch_id bigint [ref: > import_batches.id]
  source_row_number integer
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (codigo_unico, vigente_desde)
  }

  Note: 'Base Estructura Costos Santander DG.xlsx / Criterios Flete. vigente_desde usa YYYY-MM.'
}

Table base_stock_santander {
  id bigint [pk, increment]
  cliente varchar(255)
  grupo varchar(255)
  comentarios text
  codigo_cliente varchar(255)
  producto text
  proveedor varchar(255)
  codigo_unico varchar(255)
  categoria varchar(255)
  pedido_total numeric(18,4)
  ingreso_fisico numeric(18,4)
  egreso numeric(18,4)
  stock_teorico numeric(18,4)
  stock_real numeric(18,4)
  entregas_pendientes numeric(18,4)
  transacciones_totales numeric(18,4)
  fecha_primer_ingreso date
  stock_informado numeric(18,4)
  dispone_web numeric(18,4)
  ajuste numeric(18,4)
  vigencia numeric(18,4)
  transacciones_por_dia numeric(18,6)
  dias_de_stock numeric(18,4)
  stock_necesario numeric(18,4)
  sobra_falta numeric(18,4)
  sobra_falta_segun_bulto numeric(18,4)
  porcentaje numeric(18,6)
  cantidad numeric(18,4)
  bulto numeric(18,4)
  compra_final numeric(18,4)
  costo_dg_sin_iva numeric(18,4)
  total_costo numeric(18,4)
  stock_valorizado numeric(18,4)
  utilidad_unitaria numeric(18,4)
  utilidad_total numeric(18,4)
  pv numeric(18,4)
  restantes numeric(18,4)
  import_batch_id bigint [ref: > import_batches.id]
  source_row_number integer
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    codigo_unico
    codigo_cliente
    cliente
  }

  Note: 'Base Stock Santander DG.xlsx / Santander. Conserva campos base y calculados.'
}

Table tango_clientes {
  id bigint [pk, increment]
  cliente varchar(255)
  codigo_cliente varchar(255)
  import_batch_id bigint [ref: > import_batches.id]
  source_row_number integer
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    codigo_cliente
    cliente
  }

  Note: 'Consulta ingresos Tango.xlsx / DB_Clientes 1.'
}

Table tango_ingresos {
  id bigint [pk, increment]
  cliente varchar(255)
  operacion varchar(255)
  fecha_pedido date
  orden_de_compra varchar(255)
  codigo_cliente varchar(255)
  cantidad numeric(18,4)
  origen_del_pasaje varchar(255)
  fecha_entrega date
  entregado numeric(18,4)
  comentarios text
  import_batch_id bigint [ref: > import_batches.id]
  source_row_number integer
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    fecha_pedido
    cliente
    operacion
    codigo_cliente
    orden_de_compra
  }

  Note: 'Consulta ingresos Tango.xlsx / Consulta1. La hoja vacia Hoja1 no se migra.'
}

TableGroup trazabilidad {
  source_files
  import_batches
}

TableGroup maestros {
  base_categorias
  base_clientes
  base_proveedores
  marcas
  base_productos
  base_codigo_cliente
  base_config_tasas_clientes
}

TableGroup operaciones {
  base_precios
  base_ingresos
  base_egresos_santander
  base_estructura_costos_santander
  criterios_flete
  base_stock_santander
}

TableGroup tango {
  tango_clientes
  tango_ingresos
}
